# bitcoin-ewallet-thesis

./: .gitignore  CMakeLists.txt  README.md  test_inputs.txt
src/: data.h  functions.cpp  functions.h  hd_lineage.h  hd_private.cpp  hd_private.h  hd_public.cpp  hd_public.h  hd_wallet.cpp  hd_wallet.h  main.cpp  payment_address.cpp  payment_address.h  tests.cpp  tests.h  utilities.cpp  utilities.h
src/chain/: chain_utilities.cpp  chain_utilities.h  input.cpp  input.h  output.cpp  output.h  transaction.cpp  transaction.h
src/client/: client_utilities.cpp  client_utilities.h  http_client.cpp  http_client.h
src/hd_wallet/: hd_private.cpp  hd_private.h  hd_public.cpp  hd_public.h  payment_address.cpp  payment_address.h
src/interactive/: data.h  interactive_shell.cpp  interactive_shell.h  tdata.h  transaction_builder.cpp  transaction_builder.h  utilities.cpp  utilities.h
src/server/: components.h  data.h  http_server.cpp  http_server.h
src/server/controller/: controller.h
src/server/dto/: dtos.h
src/wallet/: hd_lineage.h  hd_private.cpp  hd_private.h  hd_public.cpp  hd_public.h  hd_wallet.cpp  hd_wallet.h  payment_address.cpp  payment_address.h  trans_info.h  wallet_utilities.cpp  wallet_utilities.h
test_inputs/: defense_demo.txt  test_transaction.txt  test_transaction_hist.txt
